[gd_scene load_steps=3 format=3 uid="uid://b8l8ukkgy6gyu"]

[ext_resource type="Theme" uid="uid://vvgre7h62n12" path="res://src/ui/common/DeckTheme.tres" id="1_n4ffu"]
[ext_resource type="Script" uid="uid://bq0nri61pb1cu" path="res://src/ui/profile/ProfileScene.gd" id="2_0p7nd"]

[node name="ProfileScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n4ffu")
script = ExtResource("2_0p7nd")

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02420946, 0.15538132, 0.11694836, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelProfile" type="Panel" parent="Center"]
custom_minimum_size = Vector2(900, 560)
layout_mode = 2

[node name="VBoxRoot" type="VBoxContainer" parent="Center/PanelProfile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Header" type="HBoxContainer" parent="Center/PanelProfile/VBoxRoot"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="Center/PanelProfile/VBoxRoot/Header"]
layout_mode = 2
text = "Perfil"

[node name="BtnBack" type="Button" parent="Center/PanelProfile/VBoxRoot/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Volver"

[node name="Body" type="HBoxContainer" parent="Center/PanelProfile/VBoxRoot"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="LeftPanel" type="Panel" parent="Center/PanelProfile/VBoxRoot/Body"]
custom_minimum_size = Vector2(420, 380)
layout_mode = 2

[node name="VBoxLeft" type="VBoxContainer" parent="Center/PanelProfile/VBoxRoot/Body/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LabelSelect" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/LeftPanel/VBoxLeft"]
layout_mode = 2
text = "Selecciona perfil"

[node name="ProfilesList" type="ItemList" parent="Center/PanelProfile/VBoxRoot/Body/LeftPanel/VBoxLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="BtnCreate" type="Button" parent="Center/PanelProfile/VBoxRoot/Body/LeftPanel/VBoxLeft"]
unique_name_in_owner = true
layout_mode = 2
text = "Nuevo perfil"

[node name="RightPanel" type="Panel" parent="Center/PanelProfile/VBoxRoot/Body"]
custom_minimum_size = Vector2(420, 380)
layout_mode = 2

[node name="VBoxRight" type="VBoxContainer" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ProfileName" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
text = "Nombre: "

[node name="ProfileRole" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
text = "Rol: "

[node name="Separator" type="HSeparator" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
layout_mode = 2
text = "Estad√≠sticas"

[node name="StatsLabel" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
text = "Victorias: | Derrotas: "

[node name="RunLabel" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
unique_name_in_owner = true
layout_mode = 2
text = "Run actual: "

[node name="AdminHint" type="Label" parent="Center/PanelProfile/VBoxRoot/Body/RightPanel/VBoxRight"]
layout_mode = 2

[node name="Bottom" type="HBoxContainer" parent="Center/PanelProfile/VBoxRoot"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="BtnPlay" type="Button" parent="Center/PanelProfile/VBoxRoot/Bottom"]
unique_name_in_owner = true
layout_mode = 2
text = "Jugar"

[node name="BtnAdmin" type="Button" parent="Center/PanelProfile/VBoxRoot/Bottom"]
unique_name_in_owner = true
layout_mode = 2
text = "Admin"
